# topobus

./: .gitignore  Cargo.toml  NOTICE  README.md  index.html
.github/workflows/: pages.yml  release.yml
crates/topobus-core/: Cargo.toml
crates/topobus-core/src/: lib.rs
crates/topobus-core/src/graph/: model.rs
crates/topobus-core/src/knx/: adapter.rs  address.rs  app_model.rs  mod.rs  model.rs  xml_tags.rs  xml_utils.rs  zip_utils.rs
crates/topobus-core/src/knx/parsers/: app_program.rs  com_objects.rs  device.rs  group_addresses.rs  mod.rs  parameters.rs  project.rs  topology.rs  translations.rs
crates/topobus-server/: Cargo.toml
crates/topobus-server/src/: cli.rs  main.rs
crates/topobus-server/src/server/: api.rs  assets.rs  config.rs  mod.rs  validation.rs
crates/topobus-wasm/: Cargo.toml  build.rs
crates/topobus-wasm/src/: lib.rs
frontend/: app.js  classic.css  dpt.csv  index.html  manifest.json  styles.css  sw.js
frontend/app/: classic_view.js  context_menu.js  controls.js  details.js  dom.js  dpt.js  filters.js  help.js  index.js  interactions.js  minimap.js  navigation.js  parser.js  project_cleanup.js  project_file_store.js  selection.js  selection_store.js  settings.js  state.js  state_manager.js  theme.js  upload.js  utils.js  wasm.js  wasm_worker.js  wasm_worker_client.js
frontend/app/cache/: graph_cache.js  layout_cache.js  project_payload_cache.js
frontend/app/config/: elk-algorithms.js  performance.js
frontend/app/entities/: normalize.js
frontend/app/formatters/: device.js
frontend/app/graph/: building.js  composite.js  device_graph_builder.js  layout.js  loading.js  render.js  shapes.js  styles.js
frontend/app/ui/: details_panel.js  icons.js  panel_components.js
frontend/app/utils/: api_client.js
scripts/: serve-static.ps1  serve-static.sh
v0.1.0/: index.html
v0.1.0/app/: controls.js  dpt.js  filters.js  theme.js
v0.1.0/app/graph/: shapes.js
v0.1.1/: dpt.csv
v0.1.1/app/: details.js  state.js  wasm.js
v0.1.1/app/graph/: layout.js  render.js
