[workspace]
members = [
    "crates/topobus-core",
    "crates/topobus-server",
    "crates/topobus-wasm",
]
default-members = [
    "crates/topobus-core",
    "crates/topobus-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
mime_guess = "2.0"
open = "5.3"
pbkdf2 = "0.12"
roxmltree = "0.20"
rust-embed = "8.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
zip = { version = "0.6", default-features = false, features = ["aes-crypto", "deflate", "time"] }
