[package]
name = "topobus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
log.workspace = true
pbkdf2.workspace = true
roxmltree.workspace = true
serde.workspace = true
sha2.workspace = true
zip.workspace = true

[dev-dependencies]
env_logger.workspace = true
