[package]
name = "topobus-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
topobus-core = { path = "../topobus-core" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
mime_guess.workspace = true
open.workspace = true
rust-embed.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
