[package]
name = "topobus-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
topobus-core = { path = "../topobus-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
